app/assets/stylesheets/application.css
/* ... */
 input[type="submit"],
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
 			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(198,224,251,1)), color-stop(60%, rgba(255,255,255,0)));
 			background: -webkit-linear-gradient(top, rgba(198,224,251,1) 0%, rgba(255,255,255,0) 60%);
 			background:    -moz-linear-gradient(top, rgba(198,224,251,1) 0%, rgba(255,255,255,0) 60%);
 			background:     -ms-linear-gradient(top, rgba(198,224,251,1) 0%, rgba(255,255,255,0) 60%);
 			background:      -o-linear-gradient(top, rgba(198,224,251,1) 0%, rgba(255,255,255,0) 60%);
 			background:         linear-gradient(top, rgba(198,224,251,1) 0%, rgba(255,255,255,0) 60%);
}

 input[type="comment"],
 textarea {
   border-radius: 5px;
   text-align: left;
   width: 100%;
   margin: 2px;
   font-size: 15px;
   padding: 0px 0px 0px 9px;
   margin: 4px 0px 10px 0px;
 }

 input[type="password"],
 textarea {
   margin: 2px;
   border-radius: 5px;
   background-color: #EBEDED;
   text-align: left;
   width: 165px;
   font-size: 15px;
   padding: 1px 0px 1px 7px;
   -webkit-appearance: none;
   -moz-appearance: none;
 }

 button,
 input[type="submit"] {
   font-size: 16px;
   margin: 2px;
   text-align: center;
   cursor: pointer;
   width: 168px;
   padding: 1px 0px 1px 5px;
   background-color: #2a8cef;
   -webkit-appearance: none;
   -moz-appearance: none;
 }

 button,
 input[type="submit"]:hover {
   margin: 2px;
   text-align: center;
   cursor: pointer;
   width: 168px;
   padding: 1px 0px 1px 5px;
   background-color: #2a8cef;
   -webkit-appearance: none;
   -moz-appearance: none;
 }

 .cursor {
   cursor: pointer;
 }

 .guest {
   font-size: 16px;
   width: 47px;
   background-color: white;
   padding: 0px 0px 0px 0px;
 }

 .guest:hover {
   color: #2a8cef;
 }

 .guest_text {
   float: left;
   font-size: 16px;
   padding: 2px 0px 0px 0px;
 }

.link_to_sign_in {
  padding: 0px 0px 0px 5px;
  font-size: 16px;
  font-weight: normal;
  text-decoration: underline;
  -moz-transition: all .1s ease-in;
  -o-transition: all .1s ease-in;
  -webkit-transition: all .1s ease-in;
  transition: all .1s ease-in;
}

.link_to_sign_in:hover {
  text-decoration: none;
  font-weight: bold;
  color: #2a8cef;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.right {
  float: right;
}

.cursor {
  cursor: pointer;
}

.text_left {
  text-align: left;
}

.search_div {
  padding: 19px 0px 19px 0px;
  float: left;
  width: 25%;
}

.search_field {
  border-radius: 5px;
  text-align: left;
  width: 165px;
  background-color: #EBEDED;
  margin: 2px;
  font-size: 15px;
  padding: 1px 0px 1px 7px;
}

.search_ul {
  padding: 0px 6px 0px 6px;
  text-align: left;
  width: 165px;
  position: absolute;
}

.search_li {
  font-size: 15px;
  background: rgba(100%, 100%, 100%, .5);
  padding: 0px 4px 0px 4px;
}

.search_li:hover {
  color: #2ACDEF;
  text-shadow: .5px .5px #9e9e9e;
}

.comment_delete {
  -moz-transition: all .2s ease-in;
  -o-transition: all .2s ease-in;
  -webkit-transition: all .2s ease-in;
  transition: all .2s ease-in;
  color: #B8B8B8;
  text-shadow: 0px 0px #9e9e9e;
  float: left;
  width: 10px;
  padding: 4px 0px 0px 7px
}

.comment_delete:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
  color: purple;
  text-shadow: .5px .5px #9e9e9e;
}

.comment_field {
   -moz-transition: all .2s ease-in;
   -o-transition: all .2s ease-in;
   -webkit-transition: all .2s ease-in;
   transition: all .2s ease-in;
   background: white;
}

.comment_field:hover {
   background: #dbdbdb;
}

.comment_field:focus {
   background: #dbdbdb;
}

.comment_body {
  float: left;
  padding: 2px 2px 2px 4px;
}

.comment_name {
   padding: 2px 2px 2px 4px;
   float: left;
   -moz-transition: all .2s ease-in;
   -o-transition: all .2s ease-in;
   -webkit-transition: all .2s ease-in;
   transition: all .2s ease-in;
   color: #2a8cef;
   text-shadow: .5px .5px #9e9e9e;
}

.comment_name:hover {
    color: #2ACDEF;
    text-shadow: 1px 1px #9e9e9e;
}

.comment_div {
  font-size: 15px;
  float: left;
  width: 100%;
  text-align: left;
  padding: 2px 2px 2px 4px;
}

.album_width {
  width: 368px;
}

.album_comments {
  display: inline-block;
}

.delete_x {
   float: right;
   display: inline-block;
   padding: 13px 0px 0px 0px;
   -moz-transition: all .2s ease-in;
   -o-transition: all .2s ease-in;
   -webkit-transition: all .2s ease-in;
   transition: all .2s ease-in;
   color: #B8B8B8;
   text-shadow: 0px 0px #9e9e9e;
}

.delete_x:hover {
  color: purple;
  text-shadow: .5px .5px #9e9e9e;
}

.album_when {
  float: left;
  display: inline-block;
  font-size: 16px;
  width: 69%;
  padding: 13px 0px 0px 0px;
}

.album_like {
  float: left;
  display: inline-block;
  font-size: 16px;
  width: 7%;
  padding: 13px 0px 0px 0px;
}

.album_like_div {
  float: left;
  display: inline-block;
}

.album_entry_width {
  width: 374px;
  display: inline-block;
  padding: 2px 0px 0px 5px
}

.album_pic_display {
  width: 375px;
  height: 375px;
  -moz-transition: all .3s ease-in;
  -o-transition: all .3s ease-in;
  -webkit-transition: all .3s ease-in;
  transition: all .3s ease-in;
  box-shadow: 6px 6px 6px #E0E0E0;
}

.album_pic_display:hover {
  box-shadow: 9px 9px 9px #cecece;
  -webkit-transform: scale(1.005);
  -ms-transform: scale(1.005);
  transform: scale(1.005);
}

.album_pic_div {
  padding: 3px 0px 5px 0px;
  width: 368px;
}


.album_like_button {
  display: inline-block;
  -moz-transition: all .2s ease-in;
  -o-transition: all .2s ease-in;
  -webkit-transition: all .2s ease-in;
  transition: all .2s ease-in;
  color: #C9C9C9;
  font-size: 30px;
  text-shadow: 0px 0px #9e9e9e;
}
/* ... */

